# DSpace

./: .travis.yml  Pipfile  add-dc-rights.py  add-orcid-identifiers-csv.py  agrovoc-lookup.py  build.sh  cgcore-xsl-replacements.sed  check-spider-hits.sh  crossref-funders-lookup.py  delete-metadata-values.py  fix-metadata-values.py  generate-thumbnails.py  iso3166-lookup.py  migrate-fields.sh  orcid-authority-to-item.py  pom.xml  pyproject.toml  renovate.json  resolve-addresses.py  resolve-orcids.py  rest-find-collections.py  ror-lookup.py  subdivision-lookup.py
dspace/: pom.xml
dspace-api/: pom.xml
dspace-oai/: pom.xml
dspace-rest/: pom.xml
dspace-server-webapp/: pom.xml
dspace-solr/: pom.xml
ilri/: add-orcid-identifiers-csv.py  add_dc_rights.py  add_orcid_identifiers_csv.py  agrovoc-lookup.py  agrovoc_lookup.py  bing-networks-to-ips.sh  check-duplicates.py  check_duplicates.py  check_duplicates_fuzzy.py  countries-to-csv.py  countries_to_csv.py  create-value-pairs.sh  crossref-doi-lookup.py  crossref-funders-lookup.py  crossref-issn-lookup.py  crossref_doi_lookup.py  crossref_funders_lookup.py  crossref_issn_lookup.py  delete-metadata-values.py  delete_metadata_values.py  doi_to_handle.py  fix-initiative-mappings.py  fix-metadata-values.py  fix_initiative_mappings.py  fix_maxmind_stats.py  fix_metadata_values.py  generate-thumbnails.py  generate_solr_statistics.py  generate_thumbnails.py  get-wle-pdfs.py  get_dspace_pdfs.py  get_pdfs_dspace.py  get_pdfs_dspace6.py  get_pdfs_scihub.py  get_pdfs_unpaywall.py  get_scihub_pdfs.py  get_wle_pdfs.py  (+31 more)
(+218 files in other folders)
