[tool.poetry]
name = "dspace"
version = "0.1.0"
description = "Utilities for working with DSpace metadata."
authors = ["Alan Orth <alan.orth@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.3"
requests = "^2.24.0"
psycopg2-binary = "^2.8.5"
requests-cache = "^0.5.2"
csvkit = "^1.0.5"
pycountry = "^20.7.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.16.1"
isort = "^5.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
